--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 body{
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 13px;
+    overflow-x: hidden;
 }
 
 header{
@@ -149,4 +150,50 @@ header{
 
 .banner .pointer.active{
     background-color: #b28756;
+}
+
+/*estilização das sections*/
+
+.default{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.default .section-title, 
+.default .section-desc{
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+
+}
+
+.default .section-body{
+    max-width: 1140px;
+    margin: auto;
+}
+
+.default .section-title{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.default .section-desc{
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    color: rgb(167, 165, 165);
+}
+
+.default.light{
+    background-color: #f7f7f7;
+}
+.default.light .section-title{
+    color: #000000;
+}
+
+.default.dark{
+    background-color: #000000;
+}
+
+.default.dark .section-title{
+    color: #ffffff;
 }
