--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,19 @@ header{
     color: #ccc;
 }
 
+.button{
+    display: inline-block;
+    background-color: #b28756;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 10px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+
 .banner{
     height: calc(100vh - 100px);
     background-color: #333;
@@ -111,18 +124,6 @@ header{
     margin-top: 20px;
 }
 
-.banner a{
-    display: block;
-     background-color: #b28756;
-     color: #ffffff;
-     text-transform: uppercase;
-     font-size: 10px;
-     font-weight: 600;
-     text-decoration: none;
-     padding: 10px 30px;
-     margin-top: 30px;
-     border-radius: 20px;
-}
 
 .banner .sliders-pointers{
     width: 100vw;
@@ -186,7 +187,8 @@ header{
 .default.light{
     background-color: #f7f7f7;
 }
-.default.light .section-title{
+.default.light .section-title,
+.default.light .section-body{
     color: #000000;
 }
 
@@ -194,6 +196,51 @@ header{
     background-color: #000000;
 }
 
-.default.dark .section-title{
+.default.dark .section-title,
+.default.dark .section-body{
     color: #ffffff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*areas específicas*/
+
+/*inicio da estilização do about us*/
+.section-aboutus{
+    display: flex;
+}
+
+.section-aboutus--left{
+    flex: 1;
+}
+
+.section-aboutus--left p{
+    font-size: 14px;
+    line-height: 27px;
+}
+
+.section-aboutus--right{
+    width: 520px;
+    text-align: center;
+}
+.section-aboutus--right img{
+    width: 480px;
+    box-shadow: 0px 5px 10px #333;
 }
