--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,3 +244,40 @@ header{
     width: 480px;
     box-shadow: 0px 5px 10px #333;
 }
+
+/*inicio da estilização da section services*/
+
+.section-services{
+    display: flex;
+}
+
+.section-service{
+    flex: 1;
+    text-align: center;
+    color: #333;
+    border-right: 1px solid #333;
+    padding: 15px;
+}
+
+.section-service:first-child{
+    color: #333;
+    border-left: 1px solid #333;
+}
+
+.section-service h4{
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+    color: #ffffff;
+}
+
+.section-service p{
+    margin-top: 10px;
+    font-size: 13px;
+    color: #999;
+}
+
+.section-service img{
+    width: 65px;
+    height: 65px;
+}
