--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,3 +367,19 @@ header{
 .section-projects--photoarea:hover .section-projects--photoinfo{
     display: flex;
 }
+
+
+/*incio da estilização da section our team*/
+
+.bg-team{
+    background-image: url('/assets/images/bg.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 0;
+}
+
+.section-team-area{
+    background-color: rgba(0, 0, 0, 0.8);
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
