--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ header{
 
 }
 
+.menu-opener{
+    display: none;
+}
+
 .menu{
     flex: 1;
     display: flex;
@@ -908,4 +912,106 @@ footer {
     color:#FFF;
     font-size:14px;
     text-align:center;
+}
+
+
+/*aplicando responsividade para tablets*/
+
+@media (min-width: 450px) and (max-width:800px){
+
+    .logo{
+        margin-left: 30px;
+    }
+
+    .menu-opener{
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+    }
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(0, 0, 0, 0.8);
+        width: 70vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul{
+        flex-direction: column;
+    }
+
+    .menu li a{
+        font-weight: bold;
+        height: 80px;
+        font-size: 27px;
+        margin-left: 50px;
+        border: 0;
+    }
+
+    .menu li.active a{
+        border: 0;
+        color: #B28756;
+    }
+
+    /*section about us*/
+    .section-aboutus{
+        flex-direction: column;
+    }
+    .section-aboutus--left{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 30px;
+    }
+
+    .section-aboutus--right{
+        margin-top: 30px;
+        width: auto;
+    }
+
+    /*section servies*/
+
+    .section-services{
+        flex-wrap: wrap;
+    }
+
+    .section-service{
+        min-width: 50%;
+        margin-bottom: 30px;
+    }
+    .section-service:first-child{
+        border-left: 0;
+    }
+
+    /*section our team*/
+
+    .section-team{
+        max-width: 580px;
+    }
+
+    /*section mapa*/
+
+    .section-map{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    .section-map--info{
+        width: auto;
+
+    }
+
+    .section-map--area{
+        width: auto;
+    }
+
+    .section-map--info-item{
+        margin-bottom: 20px;
+
+    }
+
+    .section-map--info-item:last-child{
+        margin-bottom: 0;
+    }
 }
