--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1014,4 +1014,203 @@ footer {
     .section-map--info-item:last-child{
         margin-bottom: 0;
     }
+
+
+ 
+}
+
+    /*RESPONSIVIDADE PRA CELULAR*/  
+
+@media (max-width: 450px){
+
+    .logo{
+        margin-left: 30px;
+    }
+
+    .menu-opener{
+        display: block;
+        width: 45px;
+        margin-right: 30px;
+    }
+    nav{
+        display: none;
+        position: absolute;
+        z-index: 99;
+        background-color: rgba(0, 0, 0, 0.8);
+        width: 80vw;
+        height: calc(100vh - 100px);
+        top: 100px;
+        right: 0;
+    }
+    .menu ul{
+        flex-direction: column;
+    }
+
+    .menu li a{
+        font-weight: bold;
+        height: 60px;
+        font-size: 20px;
+        margin-left: 30px;
+        border: 0;
+    }
+
+    .menu li.active a{
+        border: 0;
+        color: #B28756;
+    }
+
+    /*banner*/
+    .banner h1{
+        font-size: 30px;
+    }
+
+    .banner h2{
+        font-size: 17px;
+    }
+    /*section about us*/
+    .section-aboutus{
+        flex-direction: column;
+    }
+    .section-aboutus--left{
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-top: 30px;
+    }
+
+    .section-aboutus--right{
+        margin-top: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+        width: auto;
+    }
+
+    .section-aboutus--right img{
+        width: 100%;
+    }
+
+    /*section servies*/
+
+    .section-services{
+        flex-wrap: wrap;
+    }
+
+    .section-service{
+        min-width: 100%;
+        margin-bottom: 30px;
+    }
+    .section-service:first-child{
+        border-left: 0;
+    }
+
+    /*section projects*/
+
+    .section-projects--filters{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .section-projects--photo{
+        width: 320px;
+    }
+
+    .section-projects--photoarea{
+        width: 300px;
+        height: 190px;
+    }
+
+    /*section our team*/
+
+    .section-team{
+        max-width: 280px;
+    }
+
+    /*section companies*/
+    .section-companies--area{
+        flex-direction: column;
+    }
+    .section-company{
+        padding-bottom: 20px;
+    }
+
+    /*price*/
+    .section-price{
+        flex-wrap: wrap;
+    }
+
+    /*section premium*/
+    .slidearea{
+        flex-direction: column;
+    }
+
+    .section-premium--left{
+        padding-bottom: 30px;
+    }
+
+    .section-premium--item{
+        padding: 0 20px 0px 20px;
+    }
+
+    .section-premium--left img{
+        margin: 0;
+    }
+
+    /*section facts*/
+
+    .section-facts{
+        flex-direction: column;
+    }
+    /*section share*/
+
+    .section-share{
+        flex-wrap: wrap;
+    }
+
+    /*contact*/
+    .section-contact{
+        max-width: 320px;
+    }
+
+    /*section mapa*/
+
+    .section-map{
+        padding: 0;
+        padding-bottom: 250px;
+    }
+
+    .section-map--info{
+        width: auto;
+
+    }
+
+    .section-map--area{
+        width: auto;
+    }
+
+    .section-map--info-item{
+        margin-bottom: 20px;
+
+    }
+
+    .section-map--info-item:last-child{
+        margin-bottom: 0;
+    }
+
+    /*footer*/
+
+    .footer--area{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .area1{
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
+
+    .footer--item.area2, .footer--item.area3{
+        padding-bottom: 20px;
+    }
+
+
+
 }
